Fix up the logo alignment in header

--- a/htdocs/sites/all/themes/mc_base/css/main.css
+++ b/htdocs/sites/all/themes/mc_base/css/main.css
@@ -455,6 +455,7 @@ a .ico-small {
 	display: block;
 	width: 259px;
 	height: 67px;
+    margin-top: 15px;
 }
 
 #branding .site-name {
